[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygta-local-extras"
version = "0.1.0"
description = "Local extras library extracted from pygta-workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["pygta_local_extras"]