[project]
name = "pygta-ivo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.1",
    "pandoc>=2.4",
    "pyglotaran",
    "pyglotaran-extras",
    "pygta-local-extras @ git+https://github.com/ism200/pygta-local-extras-export.git@main",
    "isort==8.0.1",
    "pip==25.3",
    "pre-commit==4.6.0",
    "pytest",
]

[tool.uv.sources]
pyglotaran = { git = "https://github.com/ism200/pyglotaran.git", branch = "scale_list" }
pyglotaran-extras = { git = "https://github.com/ism200/pyglotaran-extras.git", branch = "new-kinetic-scheme-visualizer-2" }
pygta-local-extras = { git = "https://github.com/ism200/pygta-local-extras-export.git", branch = "main" }

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
]